Backend/openshift/report/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: report-service
  namespace: ai-sandbox
  labels:
    app: report-service
spec:
  selector:
    app: report-service
  ports:
    - name: http
      port: 8086
      targetPort: 8086
