Backend/openshift/report/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: report-service
  namespace: ai-sandbox
  labels:
    app: report-service
spec:
  to:
    kind: Service
    name: report-service
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
